packages/cashc/test/compiler/ParseError/use_byte_type_as_variable_name.cash
contract IntToByte() {
    function hello(int a, byte b) {
        byte byte = byte(a);
        require(b == byte);
    }
}
